kube_deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: udacity-capstone
spec:
  selector:
    matchLabels:
      run: udacity-capstone
  replicas: 1
  template:
    metadata:
      labels:
        run: udacity-capstone
    spec:
      containers:
      - name: udacity-capstone
        image: captainbelal/udacity_capstone:BUILD_NUMBER
        ports:
        - containerPort: 80
