kube_Service.yml
apiVersion: v1
kind: Service
metadata:
  name: udacity-capstone
  labels:
    run: udacity-capstone
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: udacity-capstone
