minikube_Ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: udacity-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  -  http:
      paths:
      - path: /
        backend:
          serviceName: udacity-capstone
          servicePort: 80
